More minor cleanups from FixBugs.